# cppcompression

./: .gitignore  CMakeLists.txt  README.md  build.sh  build_temp.sh  main.cpp
src/: main.cpp
src/cli/: cpgz.cpp
src/deflate/: bitstream.cpp  bitstream.h  deflate.cpp  deflate.h
src/gzip/: gzip.cpp  gzip.h
src/helpers/: huffman_codding.cpp
src/huffman/: huffman.cpp  huffman.h
src/lz77/: lz77.cpp  lz77.h
